# actix-kanban

./: Cargo.toml  README.md
migrations/: 20220227165640_create_boards.sql  20220227265640_create_cards.sql  20220312170040_create_tokens.sql
src/: db.rs  dump_routes.rs  logger.rs  main.rs  models.rs  routes.rs
