[package]
name = "actix-kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
fern = "0.6.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = { version = "0.8", features = ["serde", "v4"] }
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "chrono", "postgres"] }
actix-web = "4.0.1"
actix-files = "0.6.0"
futures = "0.3.21"